--- a/components/HouseCard/HouseCard.module.scss
+++ b/components/HouseCard/HouseCard.module.scss
@@ -5,7 +5,6 @@
   font-size: 12px;
   color: $text-100;
   font-weight: 500;
-
   .superHost {
     border: 1px solid $text-100;
     padding: 4px 8px;
@@ -14,6 +13,7 @@
     font-weight: 700;  
   }
   .description {
+    padding: 4px 8px;
     color: $gray-100;
   }
   .title {
@@ -24,13 +24,13 @@
   }
   .rating {   
     display: flex; 
-     svg { 
-        width: 14px;
-        color: $orange;
-        margin-right: 8px; 
+    svg { 
+      width: 14px;
+      color: $orange;
+      margin-right: 8px; 
     }
   }
-  div {
+  div {   
     &:first-of-type {
       display: flex;
       justify-content: space-between;     
