--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -24,9 +24,36 @@
   align-items: center;
   img {
     width: 100%;
+    max-width: 390px;
     height: 300px;
     margin-top: 2rem;
     border-radius: 24px;
     object-fit: cover;
+  }
+}
+@media all and (min-width: 750px) {
+  .container {
+    padding: 2rem 3rem;
+  }
+  .cardContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 24px;
+    
+    img {
+      max-height: 300px;
+      margin: 0;
+    }
+  }
+}
+@media all and (min-width: 1000px) {
+  .header {
+    margin-bottom: 16px;
+  }
+  .cardContainer {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));   
+    img{
+      max-width: 100%;
+    } 
   }
 }
